--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,7 @@ pre-install:
         - pip install virtualenv
         - virtualenv create venv
         - . venv/bin/activate
-install: pip install -r requirements.txt
-script: ./setup.py build
+install:
+        - pip install -r requirements.txt
+        - ./setup.py build
+script: nosetests
