--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
-configparser
-datetime
+dateutil
 fiona
 geopandas
+gevent
+grequests
 nose
+numpy
 pandas
 pymongo
 pytz
 requests
-grequests
 shapely
 sqlalchemy
+sqlite3
 ujson
 whoosh
-gevent
+
