Quite a few changes, mostly to make things more modern Python 3: * Add type hints * Switch from `requests` to `httpx` * Switch caching layer to `httpx_caching` * Rewrite FIPS lookup table APIs to fetch a geodatabase instead of text file, adding `geopandas` cartographic boundary support * Reorganize files * Use ABCs for pluggable classes * Remove `supersqlite` dependency and require `sqlite3` with fts5 support for `TextIndex` support * Switch testing to `pytest` * Update requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,11 @@
-python-dateutil
-fiona
+docutils>=0.3
 geopandas
 httpx>=0.17.0
-nose
-numpy
+httpx_caching
 pandas
 pymongo
-pytz
-requests
+pytest
+pytest-asyncio
 shapely
-sqlalchemy
-supersqlite
-ujson
+sqlalchemy[asyncio]
 whoosh
-
